welcome page of genie

--- a/geni-capital/index.html
+++ b/geni-capital/index.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+    <h1>HEllo hope you great</h1>
     <a id="'redirect" href="./start.html"></a>
 </body>
 <script>
-    const a = document.getElementById('redirect')
-    a.click()
+    // const a = document.getElementById('redirect')
+    // a.click()
 
 </script>
 
