--- a/genie-capital/index.html
+++ b/genie-capital/index.html
@@ -13,8 +13,8 @@
     <a id="'redirect" href="./start.html"></a>
 </body>
 <script>
-    // const a = document.getElementById('redirect')
-    // a.click()
+    const a = document.getElementById('redirect')
+    a.click()
 
 </script>
 
