changed genie home

--- a/genie-capital/index.html
+++ b/genie-capital/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>HEllo hope you great</h1>
+    <h1>Genie Home</h1>
     <a id="'redirect" href="./start.html"></a>
 </body>
 <script>
