--- a/genie-capital/index.html
+++ b/genie-capital/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Genie Home</h1>
-    <a id="'redirect" href="./start.html"></a>
+    <a id="redirect" href="./start.html"></a>
 </body>
 <script>
     const a = document.getElementById('redirect')
